--- a/Zatwierdz MM.Android/Zatwierdz MM.Android.csproj
+++ b/Zatwierdz MM.Android/Zatwierdz MM.Android.csproj
@@ -43,6 +43,16 @@
     <WarningLevel>4</WarningLevel>
     <AndroidManagedSymbols>true</AndroidManagedSymbols>
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
+    <AotAssemblies>false</AotAssemblies>
+    <EnableLLVM>false</EnableLLVM>
+    <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
+    <BundleAssemblies>false</BundleAssemblies>
+    <AndroidLinkTool>r8</AndroidLinkTool>
+    <AndroidKeyStore>false</AndroidKeyStore>
+    <AndroidSigningKeyStore>C:\Users\pawel\AppData\Local\Xamarin\Mono for Android\Keystore\zatwierdzMMkey\zatwierdzMMkey.keystore</AndroidSigningKeyStore>
+    <AndroidSigningStorePass>manieczki22</AndroidSigningStorePass>
+    <AndroidSigningKeyAlias>zatwierdzMMkey</AndroidSigningKeyAlias>
+    <AndroidSigningKeyPass>manieczki22</AndroidSigningKeyPass>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
@@ -59,6 +69,9 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.7.0.1239" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="ZXing.Net.Mobile">
+      <Version>2.4.1</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
