--- a/Zatwierdz MM/Zatwierdz MM.csproj
+++ b/Zatwierdz MM/Zatwierdz MM.csproj
@@ -12,7 +12,9 @@
 
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.7.0.1239" />  
-    <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />  
+    <PackageReference Include="ZXing.Net.Mobile" Version="2.4.1" />  
+    <PackageReference Include="ZXing.Net.Mobile.Forms" Version="2.4.1" />
   </ItemGroup>
 
   <ItemGroup>
