--- a/Zatwierdz MM/Zatwierdz MM.csproj
+++ b/Zatwierdz MM/Zatwierdz MM.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
     <PackageReference Include="Xamarin.Forms" Version="4.7.0.1239" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />  
     <PackageReference Include="ZXing.Net.Mobile" Version="2.4.1" />  
@@ -28,6 +29,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\PrzyjmijMMPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\PrzyjmijMMSkanowanie.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\UstawieniaPage.xaml">
