--- a/Zatwierdz MM.Android/Zatwierdz MM.Android.csproj
+++ b/Zatwierdz MM.Android/Zatwierdz MM.Android.csproj
@@ -72,6 +72,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Rg.Plugins.Popup">
+      <Version>2.0.0.10</Version>
+    </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.7.335</Version>
     </PackageReference>
