--- a/Zatwierdz MM/Zatwierdz MM.csproj
+++ b/Zatwierdz MM/Zatwierdz MM.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Rg.Plugins.Popup" Version="2.0.0.10" />
     <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
     <PackageReference Include="Xamarin.Forms" Version="4.7.0.1239" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />  
